--- a/temperature-conversion/index.html
+++ b/temperature-conversion/index.html
@@ -12,7 +12,7 @@
         <hr />
         <h2>Convert from Celsius to Fahrenheit: </h2>
         <input type="number" id="celsius"></input> <button id="cToF">Convert</button>
-        <p id="conversion"></p>
+        <p id="conversion">Result:</p>
         <script src="main.js"></script>
     </body>
 </html>
